# nonogram

./: CMakeLists.txt
boards/: 1.board  1.json
include/: nonogram.hpp
src/: nonogram_main.cpp  readJson.cpp  readJson.h
